--- a/.github/workflows/deploysite.yaml
+++ b/.github/workflows/deploysite.yaml
@@ -17,13 +17,14 @@ jobs:
           node-version: 14
 
       - name: Install Dependencies
-        run: npm i
+        run: npm ci
 
       - name: Generate Site
-        run: npm run build:ssr
+        run: npm run build:ci
 
-      - name: Deploy Site
-        uses: npm run serve:ssr
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: gh-pages
+          FOLDER: dist
