--- a/.github/workflows/deploysite.yaml
+++ b/.github/workflows/deploysite.yaml
@@ -17,10 +17,10 @@ jobs:
           node-version: 14
 
       - name: Install Dependencies
-        run: npm ci
+        run: npm i
 
       - name: Generate Site
-        run: npm run build:ci
+        run: npm run build
 
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@releases/v3
