--- a/.github/workflows/deploysite.yaml
+++ b/.github/workflows/deploysite.yaml
@@ -20,10 +20,10 @@ jobs:
         run: npm i
 
       - name: Generate Site
-        run: npm run build
+        run: npm run build-prod
 
       - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@releases/v3
+        run: npm run deploy
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages
