--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build-prod": "ng build --prod",
+    "deploy": "ng deploy --base-href=https://github.com/gtruong3000/resume.git",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "dev:ssr": "ng run resume:serve-ssr",
@@ -37,6 +39,7 @@
     "@types/express": "^4.17.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "angular-cli-ghpages": "^1.0.0",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
