Update angular.json with deploy action

--- a/angular.json
+++ b/angular.json
@@ -162,6 +162,9 @@
             }
           },
           "defaultConfiguration": "production"
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
