--- a/.github/workflows/deploysite.yaml
+++ b/.github/workflows/deploysite.yaml
@@ -26,4 +26,5 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4.2.3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          branch: gh-pages
+          folder: dist
