--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "build-prod": "ng build --prod",
-    "deploy": "ng deploy --base-href=https://github.com/gtruong3000/resume",
+    "deploy": "ng deploy --base-href=https://github.com/gtruong3000/resume.git",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "dev:ssr": "ng run resume:serve-ssr",
